--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,11 @@
     margin: 0px;
     color: #0f0f0f;
 }
+
+.aboutus_header{
+    margin-left: 10px;
+}
+
+.description{
+    padding: 50px 0px 50px 0px;
+}
