--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,12 @@
 .description{
     padding: 50px 0px 50px 0px;
 }
+
+body{
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark{
+    background-color: #512DA8;
+}
