--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,13 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.modal .modal-header {
+  background: #512DA8; }
+  .modal .modal-header .modal-title {
+    color: white; }
+  .modal .modal-header button {
+    color: #D1C4E9; }
+
+.modal .modal-body {
+  background: #D1C4E9; }
